--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <section id="cta" class="cta">
     <h2>Курсқа жазыл!</h2>
     <p>Төмендегі батырма арқылы бізге хабарласып, курсты бастай аласыз.</p>
-    <a href="https://t.me/skillorda_bot" class="btn">Telegram арқылы жазылу</a>
+    <a href="https://t.me/SkillOrda" class="btn">Telegram арқылы жазылу</a>
   </section>
 
   <footer>
