--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
       <li>🧑‍🏫 Мектеп мұғалімдері</li>
       <li>🧑‍🎓 IT студенттері</li>
       <li>🧑‍💻 Компьютер сатушылар</li>
+      <li>❇️ Компьютер білімін "Skill Orda" мен бірге дамытқысы келетіндер</li>
     </ul>
   </section>
 
