--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
   <section id="cta" class="cta">
     <h2>Курсқа жазыл!</h2>
     <p>Төмендегі батырма арқылы бізге хабарласып, курсты бастай аласыз.</p>
-    <a href="https://t.me/skillorda_bot" class="btn">Telegram арқылы жазылу</a>
+    <a href="https://t.me/skillorda_bot?start=w42091518" class="btn">Telegram арқылы жазылу</a>
   </section>
 
   <footer>
